# parser-benchmark

./: .gitignore
go/: go.mod  go.sum  main.go  stream.go
js/: htmlparser.js  package-lock.json  package.json  parse.js
lolhtml-wasm/: index.mjs  package-lock.json  package.json
rust/: Cargo.toml  main.rs
