[package]
name = "html_stream_modifier"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
lol_html = "2.2.0"
nix = { version = "0.29.0", features = ["resource"] }
thiserror = "2.0.12"
bytes = "1.10.1"

[[bin]]
name = "html_stream_modifier"
path = "main.rs"

